@@ -8,6 +8,8 @@
 #define GTK_THEME_KEY      "/desktop/gnome/interface/gtk_theme"
 #define WINDOW_THEME_KEY   "/desktop/gnome/applications/window_manager/theme"
 #define ICON_THEME_KEY     "/desktop/gnome/interface/icon_theme"
+#define FONT_KEY	   "/desktop/gnome/interface/font_name"
+
 #define METACITY_THEME_DIR "/apps/metacity/general"
 #define METACITY_THEME_KEY METACITY_THEME_DIR "/theme"
 
